Remove kotlin dependency and unnecessary code